# pyfemtet-opt-gui

./: .gitignore  .readthedocs.yaml  .ruff.toml  _test.py  _test_opt.py  designer.bat  example-deploy.bat  lrelease.bat  lupdate.bat  onestop-install-jp.ps1  pyproject.toml
development_docs/: reference.txt
development_docs/tmp/: ui_untitled.py  untitled.ui
docs/: README.md  requirements.txt
docs/source/: advanced_usage.rst  changelog.rst  conf.py  femtet_optimization.rst  index.rst  installation.rst  introduction.rst  license_and_credits.rst  models_and_algorithms.rst  quick_start.rst  quickstart.rst  references.rst  samples_and_tutorials.rst  solidworks_integration.rst  troubleshooting.rst  usage.rst  user_guide.rst
examples/: run_classwizard.bat  run_imageviewer.bat  run_licensewizard.bat
examples/classwizard/: classwizard.py
examples/licensewizard/: licensewizard.py
minimum_codes/: minimum_code_to_set_item_to_view.setModel.py
pyfemtet_opt_gui/: __main__.py  _p.py  app_en_us.ts  expression_eval.py  femprj_model.py  item_as_model.py  main.py  obj_model.py  prm_model.py  problem_model.py  qml_en_us.qm  run_model.py  script_builder.py  ui_wizard.py  util.py  wizard.ui
pyfemtet_opt_gui/builder/: builder.py  main.py
pyfemtet_opt_gui/common/: expression_processor.py  pyfemtet_model_bases.py  qt_util.py  return_msg.py  solidworks_function_support.py  titles.py
pyfemtet_opt_gui/fem_interfaces/: __init__.py  connection_worker.py  femtet_interface_gui.py  solidworks_interface_gui.py
pyfemtet_opt_gui/femtet/: __init__.py  femtet.py  femtet_interface_gui.py
pyfemtet_opt_gui/gui_interfaces/: __init__.py
pyfemtet_opt_gui/sample/: wat_ex14_parametric.femprj
pyfemtet_opt_gui/surrogate_model_interfaces/: __init__.py
pyfemtet_opt_gui/test/: test_parametric.femprj  tmp.py
pyfemtet_opt_gui/ui/: Dialog_cns_edit.ui  WizardPage_analysis_model.ui  WizardPage_confirm.ui  WizardPage_obj.ui  WizardPage_var.ui  Wizard_main.ui  return_code.py  ui_Dialog_cns_edit.py  ui_WizardPage_analysis_model.py  ui_WizardPage_obj.py  (+4 more)
pyfemtet_opt_gui_2/: __main__.py
sandbox/: dummy_femtet.py  my_table_model.py  qtableview_test.py
sandbox2/: _p.py  main.py  table_model.py  ui_wizard.py  wizard.ui
sandbox3/: femprj_model.py  item_as_model.py  main.py  obj_model.py  prm_model.py  problem_model.py  run_model.py  script_builder.py  tree_model.py
tests/: __init__.py  femtet_interface_mock.py  test_heatsink.femprj  tst_heatsink.py
(+91 files in other folders)
