[project]
name = "pyfemtet-opt-gui"
dynamic = ["version"]
description = "GUI to build and run a script for pyfemtet.opt"
authors = [{ name = "pyfemtet", email = "148934231+pyfemtet@users.noreply.github.com" }]
requires-python = ">=3.11, <3.14"
readme = "README.md"
license = "LGPL-3.0"
dependencies = [
    "pyside6>=6.7.1, <6.9.0",
    "pyfemtet>=1.2.1,<2.0.0",
]

[project.urls]
Repository = "https://github.com/pyfemtet/pyfemtet-opt-gui"

[project.scripts]
pyfemtet-opt = "pyfemtet_opt_gui.__main__:main"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"
